See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.54.00

              Add ppmtoapplevol.  Thanks Matthew Garrett
              <mjg59@srcf.ucam.org>.

              Add ppmtoapplevol.  Thanks Matthew Garrett
              <mjg59@srcf.ucam.org>.

              Rename pbmtoicon to pbmtosunicon, to go with change
              of icontopbm to sunicontopnm in 10.53.

              pgmtoascii: Truncates instead of undefined behavior if input
              image is wider than specified width.

              pamstereogram: fix crash when not doing texture.

              pgmtoascii: Fix numerous output bugs.

              pngtopam: fix bug: -verbose reports history chunk present when
              it's really a palette.

10.12.30 BJH  Release 10.53.00

              Add pammosaicknit.  Thanks Scott Pakin.

              pnmtops: Add -textalphabits, default Postscript TextAlphaBits
              to 4.

              pngtopam: include tuple type in output.  Thanks
              Thomas Henlich <thenlich@users.sourceforge.net>.

              sunicontopnm: Understands Depth=8.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              sunicontopnm: Validate header.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              bmptopnm: Don't crash on invalid zero value of image height in
              the BMP header of a compressed file.  Always broken.
              
              bmptopnm: don't crash on large invalid value of 'colorsused' in
              the BMP header.  Introduced in 9.11.

              pm_mallocarray2: fix wild pointers when image is too big to fit
              in a single chunk of malloc memory.  Affects many Netpbm
              programs.  Introduced in 10.51.00.

              ilbmtoppm: Don't crash on image that has a transparent color
              index, but no color map.
